2011-10-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/template/YARPConfig.cmake.in: use CMAKE_CURRENT_LIST_FILE
	instead of hard-coded path [thanks Traveler Hauptman]
	[thanks Lorenzo Natale]

2011-10-28 Alessandro Scalzo <alessandro.scalzo@iit.it>

        * src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h
        * src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h
	* src/libYARP_dev/src/ServerFrameGrabber.cpp
	Added support to dragonfly2raw raw image framegrabber driver.

2011-10-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/PortReport.h: document
	limitations on yarp::os::PortReport::report
	[thanks Ugo Pattacini]

2011-10-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/RpcServer.h: fix incorrect
	forwarding in getReport/setReporter/isWriting methods.

	* src/libYARP_OS/include/yarp/os/RpcClient.h: fix incorrect
	forwarding in getReport/setReporter/isWriting methods.

	* src/libYARP_OS/harness/PortTest.cpp: add test
	for RpcServer/RpcClient problem with setReporter 
	[thanks Ugo Pattacini] [thanks Vadim Tikhanoff]

2011-10-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/yarpserver3.cpp: read settings from
	a config file if available [thanks Juan G Victores]

2011-09-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameClient.cpp: support a YARP_IP environment
	variable, that forces the IP address used for registering YARP
	ports to be in a particular family.  Prefixes allowed.  For
	example, on a machine with a 10.11.4.4 address and a 
	192.168.1.10 address, seeting YARP_IP to 192 or 192.168 or
	192.168.1.10 all result in the 192.... IP address being used.
	[thanks Zenon Mathews]

2011-09-16 Alessandro Scalzo <alessandro.scalzo@iit.it>

        * src/libYARP_OS/include/yarp/os/impl/RunReadWrite.h
        * src/libYARP_OS/src/Run.cpp
        * src/libYARP_OS/src/RunProcManager.cpp
        * src/libYARP_OS/src/RunReadWrite.cpp