@@ -1,3 +1,10 @@
+2011-10-31  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/include/yarp/os/impl/Logger.h: remove DEBUG
+	from enum, since it may be defined as a macro on some version
+	of MSVC (thanks to an anonymous sourceforge bug reporter).
+	https://sf.net/tracker/?func=detail&atid=500492&aid=3431122&group_id=62418
+
 2011-10-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* conf/template/YARPConfig.cmake.in: use CMAKE_CURRENT_LIST_FILE
